[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fat16lib"
version = "0.1.0"
description = "A Python library for reading and manipulating FAT16 filesystems"
readme = "README.md"
authors = [
    {name = "Letícia Souza Mangrich Pereira", email = "leticiamangrichh@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["fat16", "filesystem", "disk", "image"]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/LMangrich/Fat16lib"